# robotic-brewing

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
data/poi/: crisp_poi.txt  drone_poi.txt
src/main/cpp/: CMakeLists.txt  compute-bounds.cpp  filter-poi.cpp  ip-solver.cpp  merge-walks.cpp  reduce-poi.cpp
src/main/cpp/algebra/: ArithmeticCircuit.hpp  FinitePoly.hpp  MultilinearDetector.hpp  MultilinearDetectorRunner.hpp  Poly.hpp  irreducible.cpp  irreducible.hpp
src/main/cpp/algebra/ring/: GaloisField.hpp  README.md  TropicalSemiring.hpp
src/main/cpp/algorithm/base/: BaseSolver.cpp  BaseSolver.hpp
src/main/cpp/algorithm/clustering/: clustering.cpp  clustering.hpp
src/main/cpp/algorithm/exact/: AlgebraicSolver.cpp  AlgebraicSolver.hpp  DPSolver.hpp  ILPSolver.hpp  NaiveDPSolver.cpp  NaiveDPSolver.hpp  NaiveDPSolver2.cpp  NaiveDPSolver2.hpp
src/main/cpp/algorithm/graph/: connectivity.cpp  connectivity.hpp  eulerian.cpp  eulerian.hpp  shortest_path.cpp  shortest_path.hpp  spanning_tree.cpp  spanning_tree.hpp
src/main/cpp/algorithm/ilp/: ILPRunner.cpp  ILPRunner.hpp
src/main/cpp/algorithm/merge/: BaseMerger.hpp  ConcatMerger.hpp  ExactMerger.hpp  HeuristicMerger.hpp
src/main/cpp/algorithm/reduce/: BaseReducer.hpp  ClusterReducer.hpp  GreedyReducer.hpp  KCenterReducer.hpp  RandomReducer.hpp
src/main/cpp/app/bound/: BoundConfiguration.hpp
src/main/cpp/app/filter/: FilterConfiguration.hpp
src/main/cpp/app/merge/: MergeConfiguration.hpp
src/main/cpp/app/reduce/: ReduceConfiguration.hpp
src/main/cpp/app/solver/: SolverConfiguration.hpp
src/main/cpp/ds/: ProblemInstance.hpp
src/main/cpp/ds/graph/: Graph.hpp
src/main/cpp/ds/map/: Bimap.hpp
src/main/cpp/ds/queue/: AdaptivePriorityQueue.hpp
src/main/cpp/ds/set/: ArrayBitset.hpp  SortedVectorSet.hpp
src/main/cpp/ds/tree/: UnionFind.hpp
src/main/cpp/geometry/: Point.hpp
src/main/cpp/math/: number.cpp  number.hpp
src/main/cpp/readwrite/: iris.cpp  iris.hpp  pace.cpp  pace.hpp  poi.cpp  poi.hpp  walk.cpp  walk.hpp
src/main/cpp/util/: Profiler.cpp  Profiler.hpp  logger.cpp  logger.hpp  util.hpp
src/main/python/algebra/: ArithmeticCircuit.py  FinitePolynomialRing.py  MultilinearDetector.py  __init__.py
src/main/python/algorithm/base/: BaseSolver.py  __init__.py
src/main/python/algorithm/exact/: AlgebraicSolver.py  DPSolver.py  DPSolverNaive.py  ILPSolver.py
src/main/python/readwrite/: iris.py  pace.py  poi.py
src/test/cpp/: CMakeLists.txt
src/test/cpp/algebra/: ArithmeticCircuit_test.cpp  FinitePoly_test.cpp  MultilinearDetector_test.cpp  Poly_test.cpp  irreducible_test.cpp
src/test/cpp/algebra/ring/: TropicalSemiring_test.cpp
src/test/cpp/algorithm/base/: BaseSolver_test.cpp
src/test/cpp/algorithm/clustering/: clustering_test.cpp
src/test/cpp/algorithm/exact/: AlgebraicSolver_test.cpp  DPSolver_test.cpp  ILPSolver_test.cpp  NaiveDPSolver2_test.cpp  NaiveDPSolver_test.cpp
src/test/cpp/algorithm/graph/: connectivity_test.cpp  eulerian_test.cpp  shortest_path_test.cpp  spanning_tree_test.cpp
src/test/cpp/algorithm/merge/: ConcatMerger_test.cpp  ExactMerger_test.cpp  HeuristicMerger_test.cpp
src/test/cpp/algorithm/reduce/: BaseReducer_test.cpp  ClusterReducer_test.cpp  GreedyReducer_test.cpp  KCenterReducer_test.cpp  RandomReducer_test.cpp
src/test/cpp/ds/graph/: Graph_test.cpp
src/test/cpp/ds/map/: Bimap_test.cpp
src/test/cpp/ds/queue/: AdaptivePriorityQueue_test.cpp
src/test/cpp/ds/set/: ArrayBitset_test.cpp  FastSet_test.cpp  SortedVectorSet_test.cpp
src/test/cpp/ds/tree/: UnionFind_test.cpp
src/test/cpp/geometry/: Point_test.cpp
src/test/cpp/math/: number_test.cpp
src/test/cpp/readwrite/: iris_test.cpp  pace_test.cpp  poi_test.cpp  walk_test.cpp
src/test/cpp/util/: Random_test.cpp  logger_test.cpp  util_test.cpp
src/test/python/algebra/: test_ArithmeticCircuit.py  test_FinitePolynomialRing.py  test_MultilinearDetector.py
src/test/python/algorithm/base/: test_BaseSolver.py
src/test/python/algorithm/exact/: test_AlgebraicSolver.py  test_DPSolver.py  test_DPSolverNaive.py  test_ILPSolver.py
src/test/python/readwrite/: test_iris.py  test_pace.py  test_poi.py
src/test/resources/instances/: 001_tiny.gr  002_tiny.gr  003_tiny.gr  004_tiny.gr  005_real_weight.gr  006_non_metric.gr  007_revisit.gr  008_tiny.gr  009_zero_weight.gr  010_subdivided.gr  101_corner.gr  102_corner.gr  103_corner.gr  104_corner.gr  105_corner.gr  106_corner.gr  107_corner.gr  108_unreachable.gr  109_colorless.gr  110_empty.gr  111_minimal.gr  112_minimal.gr  113_disconnected.gr  114_colorless.gr  115_mst.gr  201_nonconsecutive_vertices.gt  301_nonconsecutive_colors.gt  401_dp1.gr  402_dp2.gr  403_dp3.gr  404_dp4.gr  405_dp5.gr  406_dp6.gr  501_grid_3x3.gr  502_grid_4x4.gr  503_cycles.gr
src/test/resources/test_files/: crisp_edge  crisp_vertex  graph_edge  graph_vertex
src/test/resources/walks/: 001_tiny.txt
